fix bug page detail product and Modify url api