@@ -20,6 +20,7 @@ import org.springframework.stereotype.Service;
 import javax.transaction.Transactional;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class OrderServiceImpl implements OrderService {
@@ -76,7 +77,7 @@ public class OrderServiceImpl implements OrderService {
         List<Order> orders = orderPage.getContent();
         List<OrderDTO> orderDTOS = orders.stream()
                 .map(OrderDTO::fromOrder)
-                .toList();
+                .collect(Collectors.toList());
         PageResponse pageResponse = new PageResponse(pageSize, pageNumber, orderPage.getTotalPages());
         return new ListOrderDTO(
                 pageResponse,
@@ -94,7 +95,7 @@ public class OrderServiceImpl implements OrderService {
         List<Order> orders = orderPage.getContent();
         List<OrderDTO> orderDTOS = orders.stream()
                 .map(OrderDTO::fromOrder)
-                .toList();
+                .collect(Collectors.toList());
         PageResponse pageResponse = new PageResponse(pageSize, pageNumber, orderPage.getTotalPages());
         return new ListOrderDTO(
                 pageResponse,
